# LightGuard

./: .gitignore  CLAUDE.md  README.md  config.yaml  lightguard-demo.html  pyproject.toml  requirements.txt
data/sample/: X_challenge.npy  X_test.npy  X_train.npy  y_challenge.npy  y_test.npy  y_train.npy
docs/: DEMO_RUNBOOK.md
notebooks/: demo.ipynb  train_colab.ipynb
reports/: metrics.json
scripts/: make_sample.py  network_demo.py  risk_spectrum_demo.py  run_app.py
src/lightguard/: __init__.py
src/lightguard/data/: __init__.py  loaders.py
src/lightguard/explain/: __init__.py  explainer.py  translate.py
src/lightguard/malware/: __init__.py  baselines.py  evaluate.py  train.py
src/lightguard/monitor/: __init__.py  extract.py  scan.py  watch.py
src/lightguard/network/: __init__.py  collector.py  detector.py  explain.py
src/lightguard/ui/: __init__.py  app.py  state.py
src/lightguard/ui/static/: main.css
src/lightguard/ui/templates/: base.html  dashboard.html  feed.html  result.html  scan.html
tests/: conftest.py  test_explain.py  test_loaders.py  test_malware_evaluate.py  test_malware_train.py  test_monitor.py  test_network.py  test_network_detector.py  test_ui.py
