[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightguard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "pefile>=2023.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "watchdog>=4.0",
    "flask>=3.0",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "psutil>=5.9",
    "signify==0.7.1",
]

[tool.setuptools.packages.find]
where = ["src"]
